--- a/package.json
+++ b/package.json
@@ -5,11 +5,43 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "eslint ."
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
   },
   "dependencies": {
+    "@apollo/react-hooks": "^3.1.5",
+    "apollo-boost": "^0.4.9",
+    "graphql": "^15.0.0",
+    "graphql-tag": "^2.10.3",
+    "lint-staged": "^10.2.7",
     "next": "9.4.4",
+    "prop-types": "^15.7.2",
     "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react-dom": "16.13.1",
+    "styled-components": "^5.1.1"
+  },
+  "devDependencies": {
+    "@types/node": "^14.0.9",
+    "@types/react": "^16.9.35",
+    "@zeit/next-bundle-analyzer": "^0.1.2",
+    "babel-eslint": "^10.1.0",
+    "dotenv": "^8.2.0",
+    "dotenv-webpack": "^1.8.0",
+    "eslint": "^7.1.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-class-property": "^1.1.0",
+    "eslint-plugin-prettier": "^3.1.3",
+    "eslint-plugin-react": "^7.20.0",
+    "eslint-plugin-react-hooks": "^4.0.4",
+    "husky": "^4.2.5",
+    "next-progressbar": "^1.0.0",
+    "prettier": "^2.0.5",
+    "typescript": "^3.9.3",
+    "webpack": "^4.43.0"
   }
 }
